Fixed overflow and added Prismjs syntax highlighting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,33 +12,13 @@ a:hover {
     text-decoration: none;
 }
 
-pre, code {
-    background: #C44D58;
-    text-align: left;
-}
-
-code {
-    padding: 0.2em 0.4em;
-    white-space: nowrap;
-}
-
-.code {
-    overflow-x: auto;
-    padding: 1rem;
-}
-
-.code code {
-    background: none;
-    padding: 0;
-    white-space: pre;
-    word-wrap: normal;
-}
-
 body {
     background: #556270;
     font-family: 'Clear Sans', sans-serif;
+    overflow-x: hidden;
 }
 
+/* Header */
 .header-menu {
     padding: .5rem;
     text-align: left;
@@ -67,6 +47,7 @@ body {
     display: inline-block;
 }
 
+/* Setup */
 .instructions {
     background: #FF6B6B;
     color: #FFF;
@@ -76,17 +57,18 @@ body {
         padding: 1rem 2rem;
     }
 
+/* Demo */
 .preview {
     background: rgb(230, 230, 230);
     padding: 2rem 0;
     text-align: center;
 }
-
     .preview-content {
         font-size: 2rem;
         font-weight: 300;
     }
 
+/* Footer */
 .footer {
     color: #FFF;
     padding: 2rem;
@@ -96,3 +78,120 @@ body {
         color: #FFB8D3;
         font-style: normal;
     }
+
+
+/* http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript+bash */
+/**
+ * okaidia theme for JavaScript, CSS and HTML
+ * Loosely based on Monokai textmate theme by http://www.monokai.nl/
+ * @author ocodia
+ */
+
+code[class*="language-"],
+pre[class*="language-"] {
+    color: #f8f8f2;
+    text-shadow: 0 1px rgba(0,0,0,0.3);
+    font-family: Consolas, Monaco, 'Andale Mono', monospace;
+    direction: ltr;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+    border-radius: 0.3em;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+    background: #272822;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+    padding: .1em;
+    border-radius: .3em;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+    color: slategray;
+}
+
+.token.punctuation {
+    color: #f8f8f2;
+}
+
+.namespace {
+    opacity: .7;
+}
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol {
+    color: #f92672;
+}
+
+.token.boolean,
+.token.number{
+    color: #ae81ff;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.builtin {
+    color: #a6e22e;
+}
+
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+    color: #f8f8f2;
+}
+
+.token.atrule,
+.token.attr-value
+{
+    color: #e6db74;
+}
+
+
+.token.keyword{
+color: #66d9ef;
+}
+
+.token.regex,
+.token.important {
+    color: #fd971f;
+}
+
+.token.important {
+    font-weight: bold;
+}
+
+.token.entity {
+    cursor: help;
+}
+
